# dora-vosk

./: .gitignore  README.md  dataflow.yml  microphone_asr.py  pyproject.toml
dora-vosk/: README.md  pyproject.toml
dora-vosk/dora_vosk/: main.py
dora-vosk/tests/: test_dora_vosk.py
